# trabajo-helices

./: CMakeLists.txt  README.md
res/: drag_naca2411.txt  lift_naca2411.txt
src/: DatosPerfiles.cpp  DatosPerfiles.h  Helice.cpp  Helice.h  Main.cpp  Util.h
